--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,33 @@
-body {
-  background-color: black;
+@media (min-width: 375px) {
+  body {
+    background: var(--Background, #F6F6F6);
+    float: left;
+    width: 60%;
+  }
+}
+h1 {
+  font-family: "Shrikhand", serif;
+}
+
+.title {
+  display: flex;
+  width: 375px;
+  height: 63px;
+  padding: 14px 89px 13px 89px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  background: var(--White, #FFF);
+  /* Shadow/Badge */
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
+.titles {
+  display: flex;
+  width: 197px;
+  height: 36px;
+  padding: 0px 19px 0px 16px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
 }/*# sourceMappingURL=style.css.map */
