--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,11 @@
 @import "variables";
-@media (min-width:375px){
+@media screen and (min-width:375px){
     body{background-color: $primarybackground;
-    
-width: 60%;
-;}
+    float: left;
+   margin: 0;
+   padding: 0;
+    flex-shrink: 0;
+}
     
 
 }
@@ -22,15 +24,15 @@ height: 70px;
 padding: 14px 89px 13px 89px;
 justify-content: center;
 align-items: center;
-flex-grow: 1;
+flex-shrink: 0;
 /* Shadow/Badge */
 background-color: #FFF;
 box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
 width:100%;
-gap:-10px;
-
-
+gap:-0.5px;
 }
+
+
 .titles{
     display: flex;
 width: 197px;
@@ -38,7 +40,7 @@ height: 36px;
 padding: 0px 19px 0px 16px;
 justify-content: center;
 align-items: center;
-flex-grow: 1;
+flex-shrink: 0;
 padding-left: px;
 }
 
@@ -49,11 +51,12 @@ height: 50px;
 justify-content: center;
 align-items: center;
 gap: 0px;
-flex-grow: 1;
+flex-shrink: 0;
 padding: 13px 89px 13px 89px;
 background: var(--Grey-2, #EAEAEA);
 margin-top: 1px;
 width: 100%;
+margin-bottom: 35px;
 }
 
 #london{
@@ -63,12 +66,15 @@ font-family: Roboto;
 font-style: normal;
 font-weight: 500;
 line-height: normal;
+
 }
 
 
 
 /* 2nd section of first page */ 
+.cta{
 
+}
 
 
 .book{
@@ -81,6 +87,8 @@ font-size: 24px;
 font-style: normal;
 font-weight: 700;
 line-height: normal;
+padding-left: 13px;
+margin-left:42px;
 }
 
 
@@ -92,17 +100,18 @@ font-size: 18px;
 font-style: normal;
 font-weight: 300;
 line-height: normal;
-
+margin-left:34px;
+flex-wrap: wrap;
 
 }
 
 button{
     border-radius: 25px;
 background: var(--Button-Gradient, linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%));
-display: flex;
-flex-direction: column;
-justify-content: center;
-flex-shrink: 0;
+margin-left: 82px;
+margin-top:27px;
+
+
 
 /* Shadow/Button */
 
@@ -122,8 +131,94 @@ width: 180.495px;
 height: 24px;
 flex-direction: column;
 justify-content: center;
+
+
+}
+
+
+/// Third section
+.howitworks{
+    width: 375px;
+    height: 440px;
+    flex-shrink: 0;
+    background-color: #FFF;
+    gap:25px;
+    display:flex;
+    flex-direction: column;
+    margin-top:52px;
+   
+}
+
+.info{
+    width: 322.486px;
+height: 72.379px;
+flex-shrink: 0;
+border-radius: 20px;
+background: var(--Background, #F6F6F6);
+display: flex;
+align-self: center;
+justify-content: center;
+/* Shadow/Instructions */
+box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+    color: #000;
+text-align: center;
+font-family: Roboto;
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+}
+
+.main{
+    margin-top: 122px;
+   
+}
+.card{
+    border-radius: 15px;
+background: #FFF;
+padding-bottom: 77px;
+/* Shadow/Card */
+margin:0px 0px 0px 17px;
+width: 346px;
+height: 251px;
 flex-shrink: 0;
 
 }
 
+.cards{
+    display: flex;
+width: 340px;
+flex-direction: column;
+align-items: center;
+gap: 18px;
+}
+
+img{width: 346px;
+    height: 231px;
+   
+object-fit: cover;
+border-radius: 15px 15px 0px 0px;}
+
+
+.textleft{
+    margin-left: 13px;
+   
+}
+
+
+.angel{ margin-top: 12px;
+    font-size: 17px;
+font-style: normal;
+font-weight: 300;
+line-height: normal;
+margin-top: 16px;
+margin-top:5px;
+
+}
+.angel{font-weight: 300;}
+
+footer  {
+    background-color: #353535;
+width:375px;
+}
 
