--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,10 @@
-@media (min-width: 375px) {
+@media screen and (min-width: 375px) {
   body {
     background-color: #F6F6F6;
-    width: 60%;
+    float: left;
+    margin: 0;
+    padding: 0;
+    flex-shrink: 0;
   }
 }
 h2, h3, h4, h5, p {
@@ -19,12 +22,12 @@ h1 {
   padding: 14px 89px 13px 89px;
   justify-content: center;
   align-items: center;
-  flex-grow: 1;
+  flex-shrink: 0;
   /* Shadow/Badge */
   background-color: #FFF;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
   width: 100%;
-  gap: -10px;
+  gap: -0.5px;
 }
 
 .titles {
@@ -34,7 +37,7 @@ h1 {
   padding: 0px 19px 0px 16px;
   justify-content: center;
   align-items: center;
-  flex-grow: 1;
+  flex-shrink: 0;
   padding-left: px;
 }
 
@@ -45,11 +48,12 @@ h1 {
   justify-content: center;
   align-items: center;
   gap: 0px;
-  flex-grow: 1;
+  flex-shrink: 0;
   padding: 13px 89px 13px 89px;
   background: var(--Grey-2, #EAEAEA);
   margin-top: 1px;
   width: 100%;
+  margin-bottom: 35px;
 }
 
 #london {
@@ -71,6 +75,8 @@ h1 {
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  padding-left: 13px;
+  margin-left: 42px;
 }
 
 .discover {
@@ -81,15 +87,15 @@ h1 {
   font-style: normal;
   font-weight: 300;
   line-height: normal;
+  margin-left: 34px;
+  flex-wrap: wrap;
 }
 
 button {
   border-radius: 25px;
   background: var(--Button-Gradient, linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%));
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  flex-shrink: 0;
+  margin-left: 82px;
+  margin-top: 27px;
   /* Shadow/Button */
 }
 
@@ -107,5 +113,88 @@ div > button > h2 {
   height: 24px;
   flex-direction: column;
   justify-content: center;
+}
+
+.howitworks {
+  width: 375px;
+  height: 440px;
   flex-shrink: 0;
+  background-color: #FFF;
+  gap: 25px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 52px;
+}
+
+.info {
+  width: 322.486px;
+  height: 72.379px;
+  flex-shrink: 0;
+  border-radius: 20px;
+  background: var(--Background, #F6F6F6);
+  display: flex;
+  align-self: center;
+  justify-content: center;
+  /* Shadow/Instructions */
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+  color: #000;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.main {
+  margin-top: 122px;
+}
+
+.card {
+  border-radius: 15px;
+  background: #FFF;
+  padding-bottom: 77px;
+  /* Shadow/Card */
+  margin: 0px 0px 0px 17px;
+  width: 346px;
+  height: 251px;
+  flex-shrink: 0;
+}
+
+.cards {
+  display: flex;
+  width: 340px;
+  flex-direction: column;
+  align-items: center;
+  gap: 18px;
+}
+
+img {
+  width: 346px;
+  height: 231px;
+  object-fit: cover;
+  border-radius: 15px 15px 0px 0px;
+}
+
+.textleft {
+  margin-left: 13px;
+}
+
+.angel {
+  margin-top: 12px;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  margin-top: 16px;
+  margin-top: 5px;
+}
+
+.angel {
+  font-weight: 300;
+}
+
+footer {
+  background-color: #353535;
+  width: 375px;
 }/*# sourceMappingURL=style.css.map */
