--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,224 +1,232 @@
-@import "variables";
-@media screen and (min-width:375px){
-    body{background-color: $primarybackground;
-    float: left;
-   margin: 0;
-   padding: 0;
-    flex-shrink: 0;
-}
-    
+//base styles
+@import "./base/variables";
+@import "./base/mixin";
+@import "./base/reset";
+@import "./base/default";
+//layout
+@import "./layout/header";
+@import "./layout/footer";
+//components
+@import "./components/buttons";
+// pages
+@import "./pages/home";
+@import "./pages/menu";
+@import "./pages/howitworks";
+@import "./components/cards";
 
-}
+// @media screen and (min-width:375px){
+//     body{background-color: $primarybackground;
+//     float: left;
+//    margin: 0;
+//    padding: 0;
+//     flex-shrink: 0;
+// }
 
-h2,h3,h4,h5,p{
-    font-family: 'Roboto', sans-serif;
-}
+// }
 
-// header f wesite
-h1{font-family: 'Shrikhand', serif;}
+// h2,h3,h4,h5,p{
+//     font-family: 'Roboto', sans-serif;
+// }
 
-.title{
-    display: flex;
-width: 375px;
-height: 70px;
-padding: 14px 89px 13px 89px;
-justify-content: center;
-align-items: center;
-flex-shrink: 0;
-/* Shadow/Badge */
-background-color: #FFF;
-box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
-width:100%;
-gap:-0.5px;
-}
+// // header f wesite
+// h1{font-family: 'Shrikhand', serif;}
 
+// .title{
+//     display: flex;
+// width: 375px;
+// height: 70px;
+// padding: 14px 89px 13px 89px;
+// justify-content: center;
+// align-items: center;
+// flex-shrink: 0;
+// /* Shadow/Badge */
+// background-color: #FFF;
+// box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
+// width:100%;
+// gap:-0.5px;
+// }
 
-.titles{
-    display: flex;
-width: 197px;
-height: 36px;
-padding: 0px 19px 0px 16px;
-justify-content: center;
-align-items: center;
-flex-shrink: 0;
-padding-left: px;
-}
+// .titles{
+//     display: flex;
+// width: 197px;
+// height: 36px;
+// padding: 0px 19px 0px 16px;
+// justify-content: center;
+// align-items: center;
+// flex-shrink: 0;
+// padding-left: px;
+// }
 
-.location{
-    display: flex;
-width: 375px;
-height: 50px;
-justify-content: center;
-align-items: center;
-gap: 0px;
-flex-shrink: 0;
-padding: 13px 89px 13px 89px;
-background: var(--Grey-2, #EAEAEA);
-margin-top: 1px;
-width: 100%;
-margin-bottom: 35px;
-}
+// .location{
+//     display: flex;
+// width: 375px;
+// height: 50px;
+// justify-content: center;
+// align-items: center;
+// gap: 0px;
+// flex-shrink: 0;
+// padding: 13px 89px 13px 89px;
+// background: var(--Grey-2, #EAEAEA);
+// margin-top: 1px;
+// width: 100%;
+// margin-bottom: 35px;
+// }
 
-#london{
-    color: var(--Grey, #353535);
-/* Button */
-font-family: Roboto;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
+// #london{
+//     color: var(--Grey, #353535);
+// /* Button */
+// font-family: Roboto;
+// font-style: normal;
+// font-weight: 500;
+// line-height: normal;
 
-}
+// }
 
+// /* 2nd section of first page */
+// .cta{
 
+// }
 
-/* 2nd section of first page */ 
-.cta{
+// .book{
+//     color: #000;
 
-}
+// text-align: center;
+// /* Section Title */
+// font-family: Roboto;
+// font-size: 24px;
+// font-style: normal;
+// font-weight: 700;
+// line-height: normal;
+// padding-left: 13px;
+// margin-left:42px;
+// }
 
+// .discover{
+//     color: var(--Grey, #353535);
+// text-align: center;
+// font-family: Roboto;
+// font-size: 18px;
+// font-style: normal;
+// font-weight: 300;
+// line-height: normal;
+// margin-left:34px;
+// flex-wrap: wrap;
 
-.book{
-    color: #000;
+// }
 
-text-align: center;
-/* Section Title */
-font-family: Roboto;
-font-size: 24px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-padding-left: 13px;
-margin-left:42px;
-}
+// button{
+//     border-radius: 25px;
+// background: var(--Button-Gradient, linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%));
+// margin-left: 82px;
+// margin-top:27px;
 
+// /* Shadow/Button */
 
-.discover{
-    color: var(--Grey, #353535);
-text-align: center;
-font-family: Roboto;
-font-size: 18px;
-font-style: normal;
-font-weight: 300;
-line-height: normal;
-margin-left:34px;
-flex-wrap: wrap;
+// }
 
-}
+// div > button > h2{
+//     color: var(--White, #FFF);
+// text-align: center;
+// /* Button */
+// font-family: Roboto;
+// font-size: 16px;
+// font-style: normal;
+// font-weight: 500;
+// line-height: normal;
+// display: flex;
+// width: 180.495px;
+// height: 24px;
+// flex-direction: column;
+// justify-content: center;
 
-button{
-    border-radius: 25px;
-background: var(--Button-Gradient, linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%));
-margin-left: 82px;
-margin-top:27px;
+// }
 
+// /// Third section
+// .howitworks{
+//     width: 375px;
+//     height: 440px;
+//     flex-shrink: 0;
+//     background-color: #FFF;
+//     gap:25px;
+//     display:flex;
+//     flex-direction: column;
+//     margin-top:52px;
 
+// }
 
-/* Shadow/Button */
+// .info{
+//     width: 322.486px;
+// height: 72.379px;
+// flex-shrink: 0;
+// border-radius: 20px;
+// background: var(--Background, #F6F6F6);
+// display: flex;
+// align-self: center;
+// justify-content: center;
+// /* Shadow/Instructions */
+// box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+//     color: #000;
+// text-align: center;
+// font-family: Roboto;
+// font-size: 16px;
+// font-style: normal;
+// font-weight: 500;
+// line-height: normal;
+// }
 
-}
+// .main{
+//     margin-top: 122px;
 
-div > button > h2{
-    color: var(--White, #FFF);
-text-align: center;
-/* Button */
-font-family: Roboto;
-font-size: 16px;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
-display: flex;
-width: 180.495px;
-height: 24px;
-flex-direction: column;
-justify-content: center;
+// }
+// .card{
+//     border-radius: 15px;
+// background: #FFF;
+// padding-bottom: 77px;
+// /* Shadow/Card */
+// margin:0px 0px 0px 17px;
+// width: 346px;
+// height: 251px;
+// flex-shrink: 0;
 
+// }
 
-}
+// .cards{
+//     display: flex;
+// width: 340px;
+// flex-direction: column;
+// align-items: center;
+// gap: 18px;
+// }
 
+// img{width: 346px;
+//     height: 231px;
 
-/// Third section
-.howitworks{
-    width: 375px;
-    height: 440px;
-    flex-shrink: 0;
-    background-color: #FFF;
-    gap:25px;
-    display:flex;
-    flex-direction: column;
-    margin-top:52px;
-   
-}
+// object-fit: cover;
+// border-radius: 15px 15px 0px 0px;}
 
-.info{
-    width: 322.486px;
-height: 72.379px;
-flex-shrink: 0;
-border-radius: 20px;
-background: var(--Background, #F6F6F6);
-display: flex;
-align-self: center;
-justify-content: center;
-/* Shadow/Instructions */
-box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
-    color: #000;
-text-align: center;
-font-family: Roboto;
-font-size: 16px;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
-}
+// .textleft{
+//     margin-left: 13px;
 
-.main{
-    margin-top: 122px;
-   
-}
-.card{
-    border-radius: 15px;
-background: #FFF;
-padding-bottom: 77px;
-/* Shadow/Card */
-margin:0px 0px 0px 17px;
-width: 346px;
-height: 251px;
-flex-shrink: 0;
+// }
 
-}
+// .angel{ margin-top: 12px;
+//     font-size: 17px;
+// font-style: normal;
+// font-weight: 300;
+// line-height: normal;
+// margin-top: 16px;
+// margin-top:5px;
 
-.cards{
-    display: flex;
-width: 340px;
-flex-direction: column;
-align-items: center;
-gap: 18px;
-}
+// }
+// .angel{font-weight: 300;}
 
-img{width: 346px;
-    height: 231px;
-   
-object-fit: cover;
-border-radius: 15px 15px 0px 0px;}
-
-
-.textleft{
-    margin-left: 13px;
-   
-}
-
-
-.angel{ margin-top: 12px;
-    font-size: 17px;
-font-style: normal;
-font-weight: 300;
-line-height: normal;
-margin-top: 16px;
-margin-top:5px;
-
-}
-.angel{font-weight: 300;}
-
-footer  {
-    background-color: #353535;
-width:375px;
-}
-
+// footer  {
+//     background-color: #353535;
+// width:375px;
+// display: flex;
+// padding: 22px 25px;
+// flex-direction: column;
+// align-items: flex-start;
+// gap: 16px;
+// }
+// footer{
