--- a/styles/style.css
+++ b/styles/style.css
@@ -1,200 +1,491 @@
-@media screen and (min-width: 375px) {
-  body {
-    background-color: #F6F6F6;
-    float: left;
-    margin: 0;
-    padding: 0;
-    flex-shrink: 0;
-  }
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/* Document
+   ========================================================================== */
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
+html {
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
 }
-h2, h3, h4, h5, p {
+
+/* Sections
+   ========================================================================== */
+/**
+ * Remove the margin in all browsers.
+ */
+body {
+  margin: 0;
+}
+
+/**
+ * Render the `main` element consistently in IE.
+ */
+main {
+  display: block;
+}
+
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/* Grouping content
+   ========================================================================== */
+/**
+ * 1. Add the correct box sizing in Firefox.
+ * 2. Show the overflow in Edge and IE.
+ */
+hr {
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+pre {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/* Text-level semantics
+   ========================================================================== */
+/**
+ * Remove the gray background on active links in IE 10.
+ */
+a {
+  background-color: transparent;
+}
+
+/**
+ * 1. Remove the bottom border in Chrome 57-
+ * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+abbr[title] {
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
+  text-decoration: underline dotted; /* 2 */
+}
+
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+b,
+strong {
+  font-weight: bolder;
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+code,
+kbd,
+samp {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
+}
+
+/**
+ * Add the correct font size in all browsers.
+ */
+small {
+  font-size: 80%;
+}
+
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+/* Embedded content
+   ========================================================================== */
+/**
+ * Remove the border on images inside links in IE 10.
+ */
+img {
+  border-style: none;
+}
+
+/* Forms
+   ========================================================================== */
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
+}
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+button,
+input { /* 1 */
+  overflow: visible;
+}
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+button,
+select { /* 1 */
+  text-transform: none;
+}
+
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+button,
+[type=button],
+[type=reset],
+[type=submit] {
+  -webkit-appearance: button;
+}
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+button::-moz-focus-inner,
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+button:-moz-focusring,
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+ * Correct the padding in Firefox.
+ */
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+/**
+ * 1. Correct the text wrapping in Edge and IE.
+ * 2. Correct the color inheritance from `fieldset` elements in IE.
+ * 3. Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
+legend {
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
+}
+
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+progress {
+  vertical-align: baseline;
+}
+
+/**
+ * Remove the default vertical scrollbar in IE 10+.
+ */
+textarea {
+  overflow: auto;
+}
+
+/**
+ * 1. Add the correct box sizing in IE 10.
+ * 2. Remove the padding in IE 10.
+ */
+[type=checkbox],
+[type=radio] {
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
+}
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+[type=number]::-webkit-inner-spin-button,
+[type=number]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+[type=search] {
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
+}
+
+/**
+ * Remove the inner padding in Chrome and Safari on macOS.
+ */
+[type=search]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+::-webkit-file-upload-button {
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
+}
+
+/* Interactive
+   ========================================================================== */
+/*
+ * Add the correct display in Edge, IE 10+, and Firefox.
+ */
+details {
+  display: block;
+}
+
+/*
+ * Add the correct display in all browsers.
+ */
+summary {
+  display: list-item;
+}
+
+/* Misc
+   ========================================================================== */
+/**
+ * Add the correct display in IE 10+.
+ */
+template {
+  display: none;
+}
+
+/**
+ * Add the correct display in IE 10.
+ */
+[hidden] {
+  display: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  background: #fff;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
   font-family: "Roboto", sans-serif;
 }
 
-h1 {
+.container {
+  max-width: 1055px;
+  margin: 0 auto;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+}
+
+.logo {
   font-family: "Shrikhand", serif;
+  font-size: 28px;
+  margin: 0;
+  padding: 15px;
 }
 
-.title {
-  display: flex;
-  width: 375px;
-  height: 70px;
-  padding: 14px 89px 13px 89px;
-  justify-content: center;
-  align-items: center;
-  flex-shrink: 0;
-  /* Shadow/Badge */
-  background-color: #FFF;
-  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
-  width: 100%;
-  gap: -0.5px;
-}
-
-.titles {
-  display: flex;
-  width: 197px;
-  height: 36px;
-  padding: 0px 19px 0px 16px;
-  justify-content: center;
-  align-items: center;
-  flex-shrink: 0;
-  padding-left: px;
-}
-
-.location {
-  display: flex;
-  width: 375px;
-  height: 50px;
-  justify-content: center;
-  align-items: center;
-  gap: 0px;
-  flex-shrink: 0;
-  padding: 13px 89px 13px 89px;
-  background: var(--Grey-2, #EAEAEA);
-  margin-top: 1px;
-  width: 100%;
-  margin-bottom: 35px;
-}
-
-#london {
-  color: var(--Grey, #353535);
-  /* Button */
-  font-family: Roboto;
-  font-style: normal;
+.btn {
+  margin: 0;
+  padding: 10px;
+  border-radius: 25px;
+  background: var(--Button-Gradient, linear-gradient(193deg, #9356dc -11.44%, #ff79da 123.93%));
+  /* Shadow/Button */
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+  border: none;
+  color: #fff;
+  display: inline-block;
   font-weight: 500;
-  line-height: normal;
+  font-family: Roboto;
+  width: 218px;
+  height: 50px;
+  flex-shrink: 0;
 }
 
-/* 2nd section of first page */
-.book {
-  color: #000;
-  text-align: center;
-  /* Section Title */
-  font-family: Roboto;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  padding-left: 13px;
-  margin-left: 42px;
+.home-page .location {
+  background: #eaeaea;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 17px;
+  font-weight: 500;
 }
-
-.discover {
-  color: var(--Grey, #353535);
+.home-page .location_icon {
+  color: #353535;
+  width: 12px;
+  height: 16px;
+  flex-shrink: 0;
+}
+.home-page .location_text {
+  font-size: 16px;
+  color: #353535;
+}
+.home-page .book-meal {
+  background: #F6F6F6;
+  padding: 20px;
   text-align: center;
-  font-family: Roboto;
+}
+.home-page .book-meal_description {
   font-size: 18px;
   font-style: normal;
   font-weight: 300;
   line-height: normal;
-  margin-left: 34px;
-  flex-wrap: wrap;
+  margin-top: 39px;
+  margin-bottom: 29px;
 }
 
-button {
-  border-radius: 25px;
-  background: var(--Button-Gradient, linear-gradient(193deg, #9356DC -11.44%, #FF79DA 123.93%));
-  margin-left: 82px;
-  margin-top: 27px;
-  /* Shadow/Button */
-}
-
-div > button > h2 {
-  color: var(--White, #FFF);
-  text-align: center;
-  /* Button */
-  font-family: Roboto;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  display: flex;
-  width: 180.495px;
-  height: 24px;
-  flex-direction: column;
-  justify-content: center;
+.menu-page .btn {
+  padding-right: 20px;
+  padding-left: 20px;
 }
 
 .howitworks {
-  width: 375px;
-  height: 440px;
   flex-shrink: 0;
-  background-color: #FFF;
+  background-color: #fff;
   gap: 25px;
   display: flex;
   flex-direction: column;
-  margin-top: 52px;
+  margin-top: 48px;
+}
+.howitworks .hiw_title {
+  margin-left: 20px;
+}
+.howitworks .fa-circle {
+  color: #9356DC;
+  width: 24px;
+  height: 24px;
+  flex-shrink: 0;
+  margin-left: 20px;
 }
 
-.info {
+.hiw_box {
   width: 322.486px;
   height: 72.379px;
   flex-shrink: 0;
   border-radius: 20px;
-  background: var(--Background, #F6F6F6);
+  background-color: #F6F6F6;
   display: flex;
-  align-self: center;
-  justify-content: center;
-  /* Shadow/Instructions */
+  align-content: center;
+  margin-left: 32.51px;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+}
+.hiw_box_text {
   color: #000;
-  text-align: center;
   font-family: Roboto;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  display: flex;
+  align-items: center;
 }
-
-.main {
-  margin-top: 122px;
-}
-
-.card {
-  border-radius: 15px;
-  background: #FFF;
-  padding-bottom: 77px;
-  /* Shadow/Card */
-  margin: 0px 0px 0px 17px;
-  width: 346px;
-  height: 251px;
+.hiw_box_mobile {
+  color: #7e7e7e;
+  width: 13.019px;
+  height: 19.903px;
   flex-shrink: 0;
+  margin: 28px 28px 33.47px;
+  display: flex;
+  align-items: center;
+}
+.hiw_box_list {
+  color: #7e7e7e;
+  width: 16px;
+  height: 15.922px;
+  flex-shrink: 0;
+  flex-shrink: 0;
+  margin: 28px 28px 33.47px;
+  display: flex;
+  align-items: center;
+}
+.hiw_box_store {
+  color: #9356DC;
+  width: 16px;
+  height: 15.922px;
+  flex-shrink: 0;
+  flex-shrink: 0;
+  margin: 28px 28px 33.47px;
+  display: flex;
+  align-items: center;
+}
+
+.rest {
+  background-color: #F6F6F6;
 }
 
 .cards {
-  display: flex;
   width: 340px;
+  height: 251px;
+  flex-shrink: 0;
+  display: flex;
   flex-direction: column;
   align-items: center;
   gap: 18px;
+  border-radius: 15px;
+  background: #fff;
+  padding-bottom: 77px;
+  margin: 0px 0px 0px 17px;
 }
 
-img {
-  width: 346px;
-  height: 231px;
-  object-fit: cover;
-  border-radius: 15px 15px 0px 0px;
-}
-
-.textleft {
-  margin-left: 13px;
-}
-
-.angel {
-  margin-top: 12px;
-  font-size: 17px;
-  font-style: normal;
-  font-weight: 300;
-  line-height: normal;
-  margin-top: 16px;
-  margin-top: 5px;
-}
-
-.angel {
-  font-weight: 300;
-}
-
-footer {
-  background-color: #353535;
-  width: 375px;
+.title {
+  margin-left: 20px;
+  margin-top: 54px;
 }/*# sourceMappingURL=style.css.map */
