--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -1,25 +1,48 @@
 .rest {
   background-color: $primarybackground;
+  h2 {
+    margin-left: 20px;
+    margin-top: 54px;
+  }
 }
 
 .cards {
-  width: 340px;
+  width: 346px;
   height: 251px;
   flex-shrink: 0;
-  display: flex;
 
-  flex-direction: column;
-  align-items: center;
-  gap: 18px;
+  padding-bottom: 88px;
 
   border-radius: 15px;
   background: #fff;
   padding-bottom: 77px;
   // /* Shadow/Card */
   margin: 0px 0px 0px 17px;
+  h3 {
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 16px;
+    margin-left: 13px;
+  }
+  p {
+    color: #000;
+    font-family: Roboto;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    margin-left: 13px;
+    margin-top: 21px;
+  }
 }
 
-.title {
-  margin-left: 20px;
-  margin-top: 54px;
+img {
+  width: 346px;
+  height: 171px;
+  flex-shrink: 0;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  object-fit: cover;
 }
