--- a/styles/style.css
+++ b/styles/style.css
@@ -470,22 +470,45 @@ header {
 .rest {
   background-color: #F6F6F6;
 }
+.rest h2 {
+  margin-left: 20px;
+  margin-top: 54px;
+}
 
 .cards {
-  width: 340px;
+  width: 346px;
   height: 251px;
   flex-shrink: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 18px;
+  padding-bottom: 88px;
   border-radius: 15px;
   background: #fff;
   padding-bottom: 77px;
   margin: 0px 0px 0px 17px;
 }
+.cards h3 {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: 16px;
+  margin-left: 13px;
+}
+.cards p {
+  color: #000;
+  font-family: Roboto;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  margin-left: 13px;
+  margin-top: 21px;
+}
 
-.title {
-  margin-left: 20px;
-  margin-top: 54px;
+img {
+  width: 346px;
+  height: 171px;
+  flex-shrink: 0;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  object-fit: cover;
 }/*# sourceMappingURL=style.css.map */
