--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -6,25 +6,30 @@
   }
 }
 
+.card {
+  display: flex;
+  flex-direction: column;
+
+  gap: 18px;
+  margin-right: 25px;
+  flex-shrink: 0;
+}
+
 .cards {
   width: 346px;
   height: 251px;
   flex-shrink: 0;
 
-  padding-bottom: 88px;
-
   border-radius: 15px;
   background: #fff;
-  padding-bottom: 77px;
+
   // /* Shadow/Card */
-  margin: 0px 0px 0px 17px;
+
   h3 {
     font-size: 18px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    margin-bottom: 16px;
-    margin-left: 13px;
   }
   p {
     color: #000;
@@ -33,16 +38,16 @@
     font-style: normal;
     font-weight: 300;
     line-height: normal;
-    margin-left: 13px;
-    margin-top: 21px;
   }
-}
+  img {
+    width: 100%;
+    height: 50%;
+    flex-shrink: 0;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    object-fit: cover;
 
-img {
-  width: 346px;
-  height: 171px;
-  flex-shrink: 0;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-  object-fit: cover;
+    display: flex;
+    align-content: center;
+  }
 }
