--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -11,8 +11,9 @@
   flex-direction: column;
 
   gap: 18px;
-  margin-right: 25px;
+
   flex-shrink: 0;
+  margin-left: 20px;
 }
 
 .cards {
@@ -30,6 +31,7 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    margin-left: 13px;
   }
   p {
     color: #000;
@@ -38,10 +40,12 @@
     font-style: normal;
     font-weight: 300;
     line-height: normal;
+    margin-bottom: 44px;
+    margin-left: 13px;
   }
   img {
     width: 100%;
-    height: 50%;
+    height: 161px;
     flex-shrink: 0;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
