--- a/styles/style.css
+++ b/styles/style.css
@@ -479,8 +479,8 @@ header {
   display: flex;
   flex-direction: column;
   gap: 18px;
-  margin-right: 25px;
   flex-shrink: 0;
+  margin-left: 20px;
 }
 
 .cards {
@@ -489,7 +489,6 @@ header {
   flex-shrink: 0;
   border-radius: 15px;
   background: #fff;
-  margin: 0px 0px 0px 17px;
 }
 .cards h3 {
   font-size: 18px;
@@ -497,7 +496,6 @@ header {
   font-weight: 700;
   line-height: normal;
   margin-left: 13px;
-  margin-top: 0;
 }
 .cards p {
   color: #000;
@@ -506,15 +504,16 @@ header {
   font-style: normal;
   font-weight: 300;
   line-height: normal;
+  margin-bottom: 44px;
   margin-left: 13px;
 }
-
-img {
-  width: 346px;
-  height: 231px;
+.cards img {
+  width: 100%;
+  height: 161px;
   flex-shrink: 0;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   object-fit: cover;
-  padding-bottom: 77px;
+  display: flex;
+  align-content: center;
 }/*# sourceMappingURL=style.css.map */
