--- a/styles/style.css
+++ b/styles/style.css
@@ -343,6 +343,41 @@ header {
   padding: 15px;
 }
 
+footer {
+  background-color: #353535;
+  display: flex;
+  width: 375px;
+  padding: 22px 25px;
+  flex-direction: column;
+  align-items: flex-start;
+}
+footer h4 {
+  color: #fff;
+  font-family: Shrikhand;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 16px;
+  gap: 16px;
+}
+footer p {
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  color: white;
+}
+footer .p {
+  font-weight: 400;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
 .btn {
   margin: 0;
   padding: 10px;
@@ -469,6 +504,7 @@ header {
 
 .rest {
   background-color: #F6F6F6;
+  padding-bottom: 66px;
 }
 .rest h2 {
   margin-left: 20px;
