--- a/styles/style.css
+++ b/styles/style.css
@@ -449,6 +449,8 @@ footer .p {
   height: 24px;
   flex-shrink: 0;
   margin-left: 20px;
+  align-content: center;
+  justify-content: center;
 }
 
 .hiw_box {
@@ -500,6 +502,21 @@ footer .p {
   margin: 28px 28px 33.47px;
   display: flex;
   align-items: center;
+}
+
+.circle {
+  background-color: #9356DC;
+  border-radius: 100%;
+  height: 24px;
+  width: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 25px;
+}
+.circle p {
+  text-align: center;
+  color: white;
 }
 
 .rest {
