--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -24,6 +24,7 @@ footer {
     font-weight: 500;
     line-height: normal;
     color: white;
+    position: relative;
   }
   .p {
     font-weight: 400;
@@ -32,5 +33,6 @@ footer {
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    position: relative;
   }
 }
