--- a/scss/pages/_howitworks.scss
+++ b/scss/pages/_howitworks.scss
@@ -88,6 +88,8 @@
   justify-content: center;
   align-items: center;
   margin-top: 25px;
+  position: relative;
+  left: -15px;
 
   p {
     text-align: center;
