--- a/scss/pages/_menu.scss
+++ b/scss/pages/_menu.scss
@@ -1,10 +1,23 @@
 //Thi is for resturants
 
 .menu-page {
+  .image {
+    width: 100%;
+    height: 275px;
+    display: block;
+    object-fit: cover;
+  }
   //put your scss styles for menu page in here
 
   .btn {
     padding-right: 20px;
     padding-left: 20px;
+  }
+  .content {
+    position: relative;
+    border-radius: 40px 40px 0px 0px;
+    background-color: aqua;
+    padding: 20px;
+    margin-top: -100px;
   }
 }
