--- a/scss/pages/_howitworks.scss
+++ b/scss/pages/_howitworks.scss
@@ -1,13 +1,23 @@
 .howitworks {
   flex-shrink: 0;
   background-color: #fff;
-  gap: 25px;
-  display: flex;
-  flex-direction: column;
+
   margin-top: 48px;
+  padding-left: 24px;
 
   .hiw_title {
     margin-left: 20px;
+  }
+
+  .hiw_items {
+    gap: 25px;
+    display: flex;
+    flex-direction: column;
+    @include desktop-only {
+      display: flex;
+      flex-flow: row wrap;
+      gap: 24px;
+    }
   }
 
   .fa-circle {
@@ -22,14 +32,18 @@
 }
 
 .hiw_box {
-  width: 322.486px;
+  width: 100%;
   height: 72.379px;
   flex-shrink: 0;
   border-radius: 20px;
   background-color: $primarybackground;
   display: flex;
   align-content: center;
-  margin-left: 32.51px;
+
+  @include desktop-only {
+    flex-flow: row wrap;
+    width: calc(100% / 3 - 24px);
+  }
 
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
   &_text {
